--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,19 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="plain_black">#373737</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="plain_white">#F0F0F0</color>
+    <color name="orange_main">#FF8526</color>
+    <color name="strong_orange">#FF7000</color>
+    <color name="gray">#838383</color>
+    <color name="plain_gray">#F2F2F2</color>
+    <color name="yellow">#FFC123</color>
+    <color name="light_yellow">#ffeb3b</color>
+    <color name="orange_brown">#A04600</color>
+    <color name="edt_edit_profile">#05005C</color>
+    <color name="blue">#002481</color>
+    <color name="plain_blue">#566793</color>
+    <color name="red">#DE0000</color>
+    <color name="light_orange">#ffb74d</color>
 </resources>
