visualize food's data in foodDetail

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="light_yellow">#ffeb3b</color>
     <color name="orange_brown">#A04600</color>
     <color name="edt_edit_profile">#05005C</color>
-    <color name="blue">#002481</color>
+    <color name="blue">#0033B6</color>
     <color name="plain_blue">#566793</color>
     <color name="red">#DE0000</color>
     <color name="light_orange">#ffb74d</color>
