--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -24,4 +24,9 @@
         android:id="@+id/statistical"
         android:title="Statistical"
         android:icon="@drawable/ic_statistical"/>
+
+    <item
+        android:id="@+id/inbox"
+        android:title="Inbox"
+        android:icon="@drawable/ic_inbox"/>
 </menu>
