--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,32 +33,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-                        <TextView
-                            android:id="@+id/name_textView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="30dp"
-                            android:fontFamily="@font/poppins_light"
-                            android:text="George William"
-                            android:textColor="@color/black"
-                            android:textSize="35sp"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/email_textView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="cakeking@gmail.com"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/name_textView" />
-
                         <ImageButton
                             android:id="@+id/menu_button"
                             android:layout_width="30dp"
@@ -75,9 +49,9 @@
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/profile_cardview"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="270dp"
                         android:layout_marginStart="20dp"
-                        android:layout_marginTop="200dp"
+                        android:layout_marginTop="130dp"
                         android:layout_marginEnd="20dp"
                         app:cardCornerRadius="20dp"
                         app:cardElevation="10dp"
@@ -90,12 +64,38 @@
                             android:layout_height="match_parent">
 
                             <TextView
+                                android:id="@+id/name_textView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="70dp"
+                                android:fontFamily="@font/poppins_light"
+                                android:text="George William"
+                                android:textColor="@color/black"
+                                android:textSize="35sp"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/email_textView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="cakeking@gmail.com"
+                                android:textColor="@color/black"
+                                android:textSize="20sp"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/name_textView" />
+
+                            <TextView
                                 android:id="@+id/address_textView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginStart="16dp"
-                                android:layout_marginTop="80dp"
+                                android:layout_marginTop="5dp"
                                 android:layout_marginEnd="16dp"
                                 android:text="90 đường số 3, trường thọ, thủ đức"
                                 android:textAlignment="center"
@@ -103,14 +103,14 @@
                                 android:textSize="18sp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toBottomOf="@+id/email_textView" />
 
                             <TextView
                                 android:id="@+id/post_amount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="70dp"
-                                android:layout_marginTop="140dp"
+                                android:layout_marginTop="190dp"
                                 android:fontFamily="@font/poppins_light"
                                 android:text="285"
                                 android:textColor="@color/black"
@@ -131,7 +131,7 @@
                                 android:layout_width="1dp"
                                 android:layout_height="50dp"
                                 android:layout_marginStart="30dp"
-                                android:layout_marginTop="140dp"
+                                android:layout_marginTop="190dp"
                                 android:background="@color/plain_black"
                                 app:layout_constraintStart_toEndOf="@+id/post_amount"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -141,7 +141,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="50dp"
-                                android:layout_marginTop="140dp"
+                                android:layout_marginTop="190dp"
                                 android:fontFamily="@font/poppins_light"
                                 android:text="80%"
                                 android:textColor="@color/black"
@@ -162,7 +162,7 @@
                                 android:layout_width="1dp"
                                 android:layout_height="50dp"
                                 android:layout_marginStart="30dp"
-                                android:layout_marginTop="140dp"
+                                android:layout_marginTop="190dp"
                                 android:background="@color/plain_black"
                                 app:layout_constraintStart_toEndOf="@+id/rating_value"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -172,7 +172,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="50dp"
-                                android:layout_marginTop="140dp"
+                                android:layout_marginTop="190dp"
                                 android:fontFamily="@font/poppins_light"
                                 android:text="$1000"
                                 android:textColor="@color/black"
@@ -197,7 +197,7 @@
                         android:id="@+id/profile_picture"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:layout_marginTop="125dp"
+                        android:layout_marginTop="60dp"
                         android:src="@drawable/profile_picture"
                         android:translationZ="100dp"
                         app:civ_border_color="#FFFFFF"
