--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold"/>
 
     <ImageView
-        android:id="@+id/back_button"
+        android:id="@+id/back_button_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_arrow_back"
