--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -71,24 +71,6 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:id="@+id/menu_button_food_detail"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:background="@drawable/bg_circle"
-                            android:gravity="center"
-                            android:orientation="horizontal"
-                            app:layout_constraintStart_toStartOf="@id/back_button"
-                            app:layout_constraintTop_toBottomOf="@id/back_button">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/ic_menu" />
-
-                        </LinearLayout>
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -109,99 +91,110 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/saleOff_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="32dp"
+                        android:layout_marginTop="38dp"
                         android:cursorVisible="true"
-                        android:enabled="false"
                         android:text="120"
+                        android:enabled="false"
+                        android:inputType="number"
+                        android:gravity="center"
+                        android:background="@drawable/bg_borderless_edit_text"
                         android:textColor="@color/edt_edit_profile"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@+id/textView3"
-                        app:layout_constraintTop_toBottomOf="@+id/image_l_size" />
+                        app:layout_constraintTop_toBottomOf="@+id/numL_textView" />
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/numL_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginTop="116dp"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
                         android:cursorVisible="true"
-                        android:enabled="false"
                         android:text="120"
+                        android:enabled="false"
+                        android:inputType="number"
+                        android:gravity="center"
                         android:textColor="@color/edt_edit_profile"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/image_l_size"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:background="@drawable/bg_borderless_edit_text"
+                        app:layout_constraintStart_toStartOf="@+id/numM_textView"
+                        app:layout_constraintTop_toBottomOf="@+id/numM_textView" />
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/priceL_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="116dp"
-                        android:cursorVisible="true"
-                        android:enabled="false"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
                         android:text="120"
+                        android:enabled="false"
+                        android:inputType="number"
                         android:textColor="@color/edt_edit_profile"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/numL_textView"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:background="@drawable/bg_borderless_edit_text"
+                        android:gravity="center"
+                        app:layout_constraintStart_toStartOf="@+id/priceM_textView"
+                        app:layout_constraintTop_toBottomOf="@+id/priceM_textView" />
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/numM_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginTop="64dp"
-                        android:cursorVisible="true"
-                        android:enabled="false"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
                         android:text="120"
+                        android:enabled="false"
+                        android:inputType="number"
                         android:textColor="@color/edt_edit_profile"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/image_m_size"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:background="@drawable/bg_borderless_edit_text"
+                        android:gravity="center"
+                        app:layout_constraintStart_toStartOf="@+id/numS_textView"
+                        app:layout_constraintTop_toBottomOf="@+id/numS_textView" />
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/priceM_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="64dp"
-                        android:cursorVisible="true"
-                        android:enabled="false"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
                         android:text="120"
+                        android:enabled="false"
+                        android:inputType="number"
                         android:textColor="@color/edt_edit_profile"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/numM_textView"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:background="@drawable/bg_borderless_edit_text"
+                        android:gravity="center"
+                        app:layout_constraintStart_toStartOf="@+id/priceS_textView"
+                        app:layout_constraintTop_toBottomOf="@+id/priceS_textView" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/priceS_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <EditText
+                        android:id="@+id/numS_textView"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
                         android:layout_marginStart="50dp"
-                        android:layout_marginTop="12dp"
-                        android:cursorVisible="true"
-                        android:enabled="false"
+                        android:layout_marginTop="17dp"
+                        android:background="@drawable/bg_borderless_edit_text"
+                        android:inputType="number"
                         android:text="120"
-                        android:textColor="@color/edt_edit_profile"
+                        android:enabled="false"
+                        android:cursorVisible="true"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textColor="@color/edt_edit_profile"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/numS_textView"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:gravity="center"
+                        app:layout_constraintStart_toEndOf="@+id/image_s_size"
+                        app:layout_constraintTop_toBottomOf="@id/amount_text" />
 
                     <TextView
                         android:id="@+id/foodName_text"
@@ -224,7 +217,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="7dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/foodName_text"
                         app:srcCompat="@drawable/ic_star"
@@ -238,8 +231,8 @@
                         android:layout_marginTop="7dp"
                         android:fontFamily="@font/poppins_light"
                         android:text="4.6"
-                        android:textColor="#373737"
-                        android:textSize="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/ic_star"
                         app:layout_constraintTop_toBottomOf="@id/foodName_text" />
@@ -261,7 +254,8 @@
                         android:layout_marginStart="44dp"
                         android:layout_marginTop="24dp"
                         android:text="S"
-                        android:textColor="@color/gray"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
                         app:layout_constraintStart_toStartOf="@id/ic_star"
                         app:layout_constraintTop_toBottomOf="@+id/ic_star"
@@ -271,12 +265,13 @@
                         android:id="@+id/amount_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="45dp"
                         android:text="Amount"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/black"
                         android:textSize="23sp"
-                        app:layout_constraintStart_toEndOf="@+id/rates_text"
-                        app:layout_constraintTop_toTopOf="@+id/rates_text" />
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintStart_toStartOf="@+id/numS_textView"
+                        app:layout_constraintTop_toBottomOf="@+id/foodName_text" />
 
                     <TextView
                         android:id="@+id/price_text"
@@ -286,24 +281,27 @@
                         android:text="Price"
                         android:textColor="@color/black"
                         android:textSize="23sp"
-                        app:layout_constraintStart_toEndOf="@+id/amount_text"
-                        app:layout_constraintTop_toTopOf="@+id/rates_text" />
+                        app:layout_constraintStart_toStartOf="@+id/priceS_textView"
+                        app:layout_constraintTop_toTopOf="@+id/amount_text" />
 
                     <EditText
-                        android:id="@+id/numS_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
-                        android:layout_marginTop="12dp"
-                        android:cursorVisible="true"
-                        android:enabled="false"
+                        android:id="@+id/priceS_textView"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="17dp"
+                        android:background="@drawable/bg_borderless_edit_text"
+                        android:inputType="number"
                         android:text="120"
-                        android:textColor="@color/edt_edit_profile"
+                        android:enabled="false"
+                        android:cursorVisible="true"
                         android:textCursorDrawable="@drawable/edit_text_cursor"
-                        android:textSize="18sp"
+                        android:textColor="@color/edt_edit_profile"
+                        android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/image_s_size"
-                        app:layout_constraintTop_toBottomOf="@+id/rates_text" />
+                        android:gravity="center"
+                        app:layout_constraintStart_toEndOf="@+id/numS_textView"
+                        app:layout_constraintTop_toBottomOf="@id/price_text" />
 
                     <ImageButton
                         android:id="@+id/image_m_size"
@@ -322,7 +320,8 @@
                         android:layout_marginStart="9dp"
                         android:layout_marginTop="4dp"
                         android:text="M"
-                        android:textColor="@color/gray"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
                         app:layout_constraintStart_toStartOf="@+id/image_m_size"
                         app:layout_constraintTop_toTopOf="@+id/image_m_size" />
@@ -344,7 +343,8 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="4dp"
                         android:text="L"
-                        android:textColor="@color/gray"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
                         app:layout_constraintStart_toStartOf="@+id/image_l_size"
                         app:layout_constraintTop_toTopOf="@+id/image_l_size" />
@@ -376,6 +376,7 @@
                         android:paddingStart="12dp"
                         android:paddingTop="7dp"
                         android:paddingEnd="12dp"
+                        android:enabled="false"
                         android:text="This is a description"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
