add delete + edit food's information

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="plain_blue">#566793</color>
     <color name="red">#DE0000</color>
     <color name="light_orange">#ffb74d</color>
+    <color name="green">#009E0F</color>
 </resources>
