--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -127,15 +127,23 @@
                     app:layout_constraintTop_toBottomOf="@+id/analyze" />
             </LinearLayout>
 
-
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/monthDataLayout" />
 
             <com.anychart.AnyChartView
                 android:id="@+id/lineChart"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/monthDataLayout"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/monthDataLayout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
