delete what we haven't done

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,42 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/strong_orange">
-
-    <ImageView
-        android:id="@+id/profile_picture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:src="@drawable/profile_picture"/>
+    android:background="@drawable/bg_profile" >
 
     <TextView
-        android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="George William"
-        app:layout_constraintTop_toTopOf="@+id/profile_picture"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
-        app:layout_constraintStart_toEndOf="@+id/profile_picture"
-        android:layout_marginStart="10dp"
-        android:textSize="18sp"
         android:fontFamily="@font/poppins_light"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
-
-    <ImageView
-        android:id="@+id/back_button_nav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_back"
-        app:layout_constraintStart_toStartOf="@+id/profile_picture"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"/>
+        android:text="Enterprise"
+        android:textColor="@color/white"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
